--- a/proyecto coder - copia/zapatillas.html
+++ b/proyecto coder - copia/zapatillas.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body class="body bodyGrid">
+<body class="body">
   <header class="header">
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
@@ -43,21 +43,17 @@
                 Productos
               </a>
               <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item" href="hombres.html">Hombres</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="mujeres.html">Mujeres</a>
-                </li>
+                <li><a class="dropdown-item" href="hombres.html">Hombres</a></li>
+                <li><a class="dropdown-item" href="mujeres.html">Mujeres</a></li>
                 <li><a class="dropdown-item" href="zapatillas.html">Zapatillas</a></li>
+
               </ul>
             </li>
+
           </ul>
           <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search" />
-            <button class="btn btn-outline-success" type="submit">
-              Buscar
-            </button>
+            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Buscar</button>
           </form>
         </div>
       </div>
@@ -65,129 +61,103 @@
   </header>
 
   <main class="main">
-    <section class="carrousel">
-      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="imagenes/carrouse.jpg" class="d-block w-100" alt="Zapatillas nike waffle" />
-          </div>
-          <div class="carousel-item">
-            <img src="imagenes/carrousel.jpg" class="d-block w-100" alt="Zapatillas adidas" />
-          </div>
-          <div class="carousel-item">
-            <img src="imagenes/carousel 2.jpg" class="d-block w-100" alt="Le coq sportif r850 " />
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-          data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-          data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-    </section>
 
     <section>
       <div class="ropa">
         <div class="card" style="width: 18rem">
-          <img src="imagenes/buso azul.jpg" class="card-img-top" alt="buzo azul nike" width="250" height="250" />
+          <img src="imagenes/deportiva.png" class="card-img-top" alt="nike deportiva gris" width="250" height="250" />
           <div class="card-body">
-            <h5 class="card-title">Buzo nike azul</h5>
-            <h3 class="card-text">1250$</h3>
+            <h5 class="card-title">Nike deportiva gris</h5>
+            <h3 class="card-text">4250$</h3>
             <a href="#" class="btn btn-primary">Comprar</a>
           </div>
         </div>
 
         <div class="card" style="width: 18rem">
-          <img src="imagenes/buso negro nike.jpg" class="card-img-top" alt="buzo negro nike" width="250" height="250" />
-          <div class="card-body">
-            <h5 class="card-title">buso nike negro</h5>
-            <h3 class="card-text">2450$</h3>
-            <a href="#" class="btn btn-primary">Comprar</a>
-          </div>
-        </div>
-
-        <div class="card" style="width: 18rem">
-          <img src="imagenes/jogging blanco.jpg" class="card-img-top" alt="jogging blanco" width="250" height="250" />
-          <div class="card-body">
-            <h5 class="card-title">Pantalón blanco</h5>
-            <h3 class="card-text">2550$</h3>
-            <a href="#" class="btn btn-primary">Comprar</a>
-          </div>
-        </div>
-
-        <div class="card" style="width: 18rem">
-          <img src="imagenes/sandalia addidas.jpg" class="card-img-top" alt="sandalia adidas" width="250"
+          <img src="imagenes/deprotiva 2.png" class="card-img-top" alt="nike deportiva blanca y negra" width="250"
             height="250" />
           <div class="card-body">
-            <h5 class="card-title">Sandalia adidas</h5>
-            <h3 class="card-text">6650$</h3>
-            <a href="#" class="btn btn-primary">Comprar</a>
-          </div>
-        </div>
-        <div class="card" style="width: 18rem">
-          <img src="imagenes/remera vans.jpg" class="card-img-top" alt="remera vans negra" width="250" height="250" />
-          <div class="card-body">
-            <h5 class="card-title">Renera manga larga vans</h5>
+            <h5 class="card-title">Nike deportiva negra</h5>
             <h3 class="card-text">3250$</h3>
             <a href="#" class="btn btn-primary">Comprar</a>
           </div>
         </div>
+
         <div class="card" style="width: 18rem">
-          <img src="imagenes/campera negra.jpg" class="card-img-top" alt="campera nike negra" width="250"
+          <img src="imagenes/huarche.jpg" class="card-img-top" alt="nike huarache blanca y roja" width="250"
             height="250" />
           <div class="card-body">
-            <h5 class="card-title">Campera nike</h5>
-            <h3 class="card-text">7250$</h3>
+            <h5 class="card-title">Nike huarache</h5>
+            <h3 class="card-text">5250$</h3>
             <a href="#" class="btn btn-primary">Comprar</a>
           </div>
         </div>
+
         <div class="card" style="width: 18rem">
-          <img src="imagenes/jogging negro hombre.jpg" class="card-img-top" alt="jogging negro hombre" width="250"
+          <img src="imagenes/zapatilla roja.jpg" class="card-img-top" alt="lebron 19 roja y azul" width="250"
             height="250" />
           <div class="card-body">
-            <h5 class="card-title">pantalón de jogging</h5>
+            <h5 class="card-title">LeBron 19 rojas</h5>
             <h3 class="card-text">6250$</h3>
             <a href="#" class="btn btn-primary">Comprar</a>
           </div>
         </div>
         <div class="card" style="width: 18rem">
-          <img src="imagenes/short hombre.jpg" class="card-img-top" alt="short deportivo hombre" width="250"
-            height="250" />
+          <img src="imagenes/zapatilla tigre.jpg" class="card-img-top" alt="nike air max" width="250" height="250" />
           <div class="card-body">
-            <h5 class="card-title">Short deportivo</h5>
-            <h3 class="card-text">2550$</h3>
+            <h5 class="card-title">Nike air max</h5>
+            <h3 class="card-text">4250$</h3>
             <a href="#" class="btn btn-primary">Comprar</a>
           </div>
         </div>
         <div class="card" style="width: 18rem">
-          <img src="imagenes/short mujer.jpg" class="card-img-top" alt="short deportivo mujer" width="250"
+          <img src="imagenes/sandalia addidas.jpg" class="card-img-top" alt="sandalia adidas" width="250"
             height="250" />
           <div class="card-body">
-            <h5 class="card-title">Short deportivo mujer</h5>
-            <h3 class="card-text">2560$</h3>
+            <h5 class="card-title">Sandalia adidas</h5>
+            <h3 class="card-text">1250$</h3>
             <a href="#" class="btn btn-primary">Comprar</a>
           </div>
         </div>
         <div class="card" style="width: 18rem">
-          <img src="imagenes/buso mujer blanco.jpg" class="card-img-top" alt="cmapera mujer blanco" width="250"
-            height="250" />
+          <img src="imagenes/reebook.jpg" class="card-img-top" alt="zapatlla reebook" width="250" height="250" />
           <div class="card-body">
-            <h5 class="card-title">Buzo blanco mujer</h5>
-            <h3 class="card-text">2560$</h3>
+            <h5 class="card-title">zapatilla reebook clasic</h5>
+            <h3 class="card-text">2250$</h3>
             <a href="#" class="btn btn-primary">Comprar</a>
           </div>
         </div>
         <div class="card" style="width: 18rem">
-          <img src="imagenes/buzo negro.png" class="card-img-top" alt="buzo negro nike estampado" width="250"
+          <img src="imagenes/zapatilla le coq.jpg" class="card-img-top" alt="zapatilla le coq deportiva negra"
+            width="250" height="250" />
+          <div class="card-body">
+            <h5 class="card-title">zapatilla le coq sportif</h5>
+            <h3 class="card-text">4250$</h3>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem">
+          <img src="imagenes/vams.jpg" class="card-img-top" alt="zapatilla vans azul" width="250" height="250" />
+          <div class="card-body">
+            <h5 class="card-title">Vans old skool clasic</h5>
+            <h3 class="card-text">1250$</h3>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem">
+          <img src="imagenes/air force.jpg" class="card-img-top" alt="air force negra y violeta" width="250"
             height="250" />
           <div class="card-body">
-            <h5 class="card-title">Buzo nike</h5>
+            <h5 class="card-title">Nike air force</h5>
             <h3 class="card-text">2150$</h3>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem">
+          <img src="imagenes/puma.jpg" class="card-img-top" alt="zapatilla puma deportiva" width="250" height="250" />
+          <div class="card-body">
+            <h5 class="card-title">Puma fast limiter</h5>
+            <h3 class="card-text">2500$</h3>
             <a href="#" class="btn btn-primary">Comprar</a>
           </div>
         </div>
@@ -195,26 +165,21 @@
     </section>
   </main>
 
+
   <footer class="footer">
     <div class="pie-pagina">
       <div class="grupo-1">
         <div class="box">
           <figure>
-            <a href="#">
-              <img src="imagenes/images.jpg" alt="Logo de SLee Dw" />
+            <a href="index.html">
+              <img src="imagenes/images.jpg" alt="addidas">
             </a>
           </figure>
         </div>
         <div class="box">
           <h2>SOBRE NOSOTROS</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio,
-            ipsa?
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio,
-            ipsa?
-          </p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
         </div>
         <div class="box">
           <h2>SIGUENOS</h2>
@@ -227,8 +192,7 @@
         </div>
       </div>
       <div class="grupo-2">
-        <small>&copy; 2022 <b>Sebastian Delage</b> - Todos los Derechos
-          Reservados.</small>
+        <small>&copy; 2022 <b>Sebastian Delage</b> - Todos los Derechos Reservados.</small>
       </div>
     </div>
   </footer>
@@ -236,6 +200,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
   </script>
+
 </body>
 
 </html>
