--- a/proyecto coder - copia/index.html
+++ b/proyecto coder - copia/index.html
@@ -199,21 +199,12 @@
     <div class="pie-pagina">
       <div class="grupo-1">
         <div class="box">
-          <figure>
-            <a href="#">
-              <img src="imagenes/images.jpg" alt="Logo de SLee Dw" />
-            </a>
-          </figure>
-        </div>
-        <div class="box">
           <h2>SOBRE NOSOTROS</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio,
-            ipsa?
+          Somos una empresa dedicada a la venta de ropa y zapatillas. Cualquier probleama contactese en las redes sociales
           </p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio,
-            ipsa?
+          Para volver al inicio <b><a style="text-decoration: none; color: #fff " href="index.html">Clik aqui</a></b>
           </p>
         </div>
         <div class="box">
