--- a/proyecto coder - copia/registro.html
+++ b/proyecto coder - copia/registro.html
@@ -12,7 +12,7 @@
   <script src="https://kit.fontawesome.com/b55d7e7a93.js" crossorigin="anonymous"></script>
   <meta name="description" content="Tienda de ropa. Ofertas Especiales. Encuentra lo que buscas">
   <meta name="keywords"
-    content="Nike, ropa, adidas,le coq, oferta, pantalones, zapatillas, jordan, lebron, deportivo, negro, hombre, mujer, zapatillas,puma, azul, buzo, remera">
+    content="ropa, registrarte, registro, inicarsesion, inicar, pagina de ropa">
 
 
 </head>
@@ -95,21 +95,12 @@
     <div class="pie-pagina">
       <div class="grupo-1">
         <div class="box">
-          <figure>
-            <a href="#">
-              <img src="img/logotipo-sleedw.svg" alt="Logo de SLee Dw" />
-            </a>
-          </figure>
-        </div>
-        <div class="box">
           <h2>SOBRE NOSOTROS</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio,
-            ipsa?
+          Somos una empresa dedicada a la venta de ropa y zapatillas. Cualquier probleama contactese en las redes sociales
           </p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio,
-            ipsa?
+          Para volver al inicio <b><a style="text-decoration: none; color: #fff " href="index.html">Clik aqui</a></b>
           </p>
         </div>
         <div class="box">
