--- a/proyecto coder - copia/hombres.html
+++ b/proyecto coder - copia/hombres.html
@@ -171,16 +171,13 @@
     <div class="pie-pagina">
       <div class="grupo-1">
         <div class="box">
-          <figure>
-            <a href="#">
-              <img src="imagenes/images.jpg" alt="Logo de SLee Dw">
-            </a>
-          </figure>
-        </div>
-        <div class="box">
           <h2>SOBRE NOSOTROS</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+          <p>
+          Somos una empresa dedicada a la venta de ropa y zapatillas. Cualquier probleama contactese en las redes sociales
+          </p>
+          <p>
+          Para volver al inicio <b><a style="text-decoration: none; color: #fff " href="index.html">Clik aqui</a></b>
+          </p>
         </div>
         <div class="box">
           <h2>SIGUENOS</h2>
@@ -193,7 +190,8 @@
         </div>
       </div>
       <div class="grupo-2">
-        <small>&copy; 2022 <b>Sebastian Delage</b> - Todos los Derechos Reservados.</small>
+        <small>&copy; 2022 <b>Sebastian Delage</b> - Todos los Derechos
+          Reservados.</small>
       </div>
     </div>
   </footer>
