--- a/proyecto coder - copia/mujeres.html
+++ b/proyecto coder - copia/mujeres.html
@@ -12,7 +12,7 @@
   <script src="https://kit.fontawesome.com/b55d7e7a93.js" crossorigin="anonymous"></script>
   <meta name="description" content="Tienda de ropa. Ofertas Especiales. Encuentra lo que buscas">
   <meta name="keywords"
-    content="Nike, ropa, adidas,le coq, oferta, pantalones, zapatillas, jordan, lebron, deportivo, negro, hombre, mujer, zapatillas,puma, azul, buzo, remera">
+    content="Nike, ropa, adidas,le coq, oferta, pantalones, jordan, mujer, deportivo, negro, rosa, conjunto,puma, azul, buzo, remera">
 
 
 </head>
@@ -168,20 +168,17 @@
 
   </main>
 
-  <footer class="footer">
+  <<footer class="footer">
     <div class="pie-pagina">
       <div class="grupo-1">
         <div class="box">
-          <figure>
-            <a href="#">
-              <img src="img/logotipo-sleedw.svg" alt="Logo de SLee Dw">
-            </a>
-          </figure>
-        </div>
-        <div class="box">
           <h2>SOBRE NOSOTROS</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+          <p>
+          Somos una empresa dedicada a la venta de ropa y zapatillas. Cualquier probleama contactese en las redes sociales
+          </p>
+          <p>
+          Para volver al inicio <b><a style="text-decoration: none; color: #fff " href="index.html">Clik aqui</a></b>
+          </p>
         </div>
         <div class="box">
           <h2>SIGUENOS</h2>
@@ -194,7 +191,8 @@
         </div>
       </div>
       <div class="grupo-2">
-        <small>&copy; 2022 <b>Sebastian Delage</b> - Todos los Derechos Reservados.</small>
+        <small>&copy; 2022 <b>Sebastian Delage</b> - Todos los Derechos
+          Reservados.</small>
       </div>
     </div>
   </footer>
