--- a/proyecto coder - copia/zapatillas.html
+++ b/proyecto coder - copia/zapatillas.html
@@ -12,7 +12,7 @@
   <script src="https://kit.fontawesome.com/b55d7e7a93.js" crossorigin="anonymous"></script>
   <meta name="description" content="Tienda de ropa. Ofertas Especiales. Encuentra lo que buscas">
   <meta name="keywords"
-    content="Nike, ropa, adidas,le coq, oferta, pantalones, zapatillas, jordan, lebron, deportivo, negro, hombre, mujer, zapatillas,puma, azul, buzo, remera">
+    content="Nike, ropa, adidas,le coq, oferta, zapatillas, jordan1,jordan4, lebron, lebron19, deportivo, negro, hombre, mujer,puma,azul,rojas,rojo">
 
 
 </head>
@@ -170,16 +170,13 @@
     <div class="pie-pagina">
       <div class="grupo-1">
         <div class="box">
-          <figure>
-            <a href="index.html">
-              <img src="imagenes/images.jpg" alt="addidas">
-            </a>
-          </figure>
-        </div>
-        <div class="box">
           <h2>SOBRE NOSOTROS</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+          <p>
+          Somos una empresa dedicada a la venta de ropa y zapatillas. Cualquier probleama contactese en las redes sociales
+          </p>
+          <p>
+          Para volver al inicio <b><a style="text-decoration: none; color: #fff " href="index.html">Clik aqui</a></b>
+          </p>
         </div>
         <div class="box">
           <h2>SIGUENOS</h2>
@@ -192,7 +189,8 @@
         </div>
       </div>
       <div class="grupo-2">
-        <small>&copy; 2022 <b>Sebastian Delage</b> - Todos los Derechos Reservados.</small>
+        <small>&copy; 2022 <b>Sebastian Delage</b> - Todos los Derechos
+          Reservados.</small>
       </div>
     </div>
   </footer>
